<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_teleop</name>
  <version>0.0.0</version>
  <description>Controls the robot with the help of the keyboard</description>
  <maintainer email="vasista1997@gmail.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
